--- a/public_html/css/agency.css
+++ b/public_html/css/agency.css
@@ -21,7 +21,7 @@ a:hover {
 }
 
 .text-primary {
-  color: #fed136 !important;
+  color: #141215 !important;
 }
 
 h1,
@@ -454,7 +454,7 @@ header.masthead .intro-text .intro-heading {
   color: white;
   border: 7px solid #e9ecef;
   border-radius: 100%;
-  background-color: #fed136;
+  background-color: #141215;
 }
 
 .timeline > li .timeline-image h4 {
