--- a/public_html/font-awesome/css/font-awesome-plugin.css
+++ b/public_html/font-awesome/css/font-awesome-plugin.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'FontAwesomePlugin';
-  src: url('../fonts/fontawesome-plugin-webfont.eot?v=0.0.5.3');
-  src: url('../fonts/fontawesome-plugin-webfont.eot?#iefix&v=0.0.5.3') format('embedded-opentype'),
-       url('../fonts/fontawesome-plugin-webfont.woff?v=0.0.5.3') format('woff'),
-       url('../fonts/fontawesome-plugin-webfont.ttf?v=0.0.5.3') format('truetype');
+  src: url('../fonts/fontawesome-plugin-webfont.eot?v=0.0.5.4');
+  src: url('../fonts/fontawesome-plugin-webfont.eot?#iefix&v=0.0.5.4') format('embedded-opentype'),
+       url('../fonts/fontawesome-plugin-webfont.woff?v=0.0.5.4') format('woff'),
+       url('../fonts/fontawesome-plugin-webfont.ttf?v=0.0.5.4') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -60,5 +60,6 @@
   content:"\f018";font:normal normal normal 1em FontAwesomePlugin;}
 .fa-bda-wallet:before {
   content:"\f019";font:normal normal normal 1em FontAwesomePlugin;}
-
+.fa-bda3:before {
+  content:"\f01A";font:normal normal normal 1em FontAwesomePlugin;}
 
