--- a/public_html/css/agency.css
+++ b/public_html/css/agency.css
@@ -8,6 +8,25 @@ body {
   font-family: 'Roboto Slab', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+span.contract {
+    font-size:0.7em;
+}
+
+@media (min-width: 768px) {
+    span.contract {
+        font-size:0.77em;
+    }
+}
+
+@media (min-width: 992px) {
+    span.contract {
+        font-size:0.85em;
+    }
+}
+
+
+
+
 p {
   line-height: 1.75;
 }
@@ -35,7 +54,7 @@ h6 {
 }
 
 section {
-  padding: 10px 0;
+  padding: 30px 0;
 }
 
 section h2.section-heading {
