かんぱらさん追加による修正など

--- a/public_html/css/style_phone.css
+++ b/public_html/css/style_phone.css
@@ -24,3 +24,8 @@
 	background: url(../img/team-bg.jpg) no-repeat center center;
 	background-size: cover;
 }
+
+#coin-contract {
+	font-family: 'Anton';
+	font-size:0.85em;
+}
