--- a/public_html/css/style_pc.css
+++ b/public_html/css/style_pc.css
@@ -24,3 +24,6 @@
 	background: url(../img/team-bg.jpg) no-repeat center center fixed;
 	background-size: cover;
 }
+#coin-contract {
+	font-weight: bold;
+}
